# racecar

./: .commit-msg-lint-progress.txt  .gitignore  ADOPT.md  CHANGELOG.md  CLAUDE.md  MANIFESTO.md  Makefile  PLAN.md  README.md  SKILL.md  TODO.md  install  pyproject.toml
arch-coherence/: AUTH.md  AXIOMS.md  CHECKS.md  CLI.md  DJANGO.md  FACES.md  GENERATION.md  PACKAGING.md  PYTHON.md  README.md  SKILL.md  SURFACES.md
cli-docs/: SKILL.md
commit/: SKILL.md
commit-decompose/: SKILL.md
commit-preflight/: SKILL.md
create-package/: README.md  SKILL.md
create-server/: README.md  SKILL.md
deploy-server/: README.md  SKILL.md
doc-coherence/: DOC_GRAPH.md  PROTOCOL.md  README.md  SKILL.md
docs-orchestrator/: CONTENT_BLINDNESS.md  ORCHESTRATION.md  README.md  SKILL.md
drafts/: ai-native-essay-v2.md  ai-native-essay.md  ai-native-spine.md  dag-worldview-essay.md  landing-hero.md
eng-review/: DJANGO.md  PYTHON.md  README.md  RECONCILIATION.md  SKILL.md  WORKFLOW.md
examples/: README.md  pyproject.toml
examples/src/widgets/: __init__.py  gadget.py
expert/: EXPERT.md  README.md  SKILL.md
hooks/: claude_racecar_hook.sh  session_check_sync.py  session_discover_cli.py  session_load_standards.py  session_telemetry_notice.py
llm-summary/: README.md  SKILL.md  SPEC.md
normalize/: SKILL.md
scripts/: check_config_drift.py  check_prose_punctuation.py  check_racecar_overrides.py  check_version_bump.py  commit_preflight.sh  doctor.py  expert_mode.py  fleet_profile.py  harvest_build_telemetry.py  init_project.py  instrument_telemetry.py  racecar-manifest.txt  (+8 more)
(+145 files in other folders)
